# csv_profile

./: .gitattributes  .gitignore  README.md  fix-toml.ps1  pyproject.toml
outputs/: profile-sample.md
src/csv_profiler/: __init__.py  app-simple.py  cli.py
src/csv_profiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
