[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-profiler"
version = "0.1.0"
description = "A CSV profiling tool"
authors = [{name = "ReAlangari"}]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]

[project.scripts]
csv-profiler = "csv_profiler.cli:app"

[tool.setuptools]
packages = ["csv_profiler"]
