[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-profiler"
version = "1.0.0"
description = "CSV Profiler - Analyze and profile CSV files"
authors = [{name = "Reema AlAngari"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "typer>=0.9.0",
    "streamlit>=1.28.0",
]

[project.scripts]
csv-profiler = "csv_profiler.cli:app"